DT-2004-01-16-0: Bugfix:    Fixed uninitialized read in new commlib on Solaris 9
                 Changed:   cl_host_list.c

SG-2004-01-16-0: Bugfix:    the slots attribute could not be overwritten on host
                            or global level. This has been changed.
                 Changed:   scheduler
                 Review:    AH

CR-2004-01-16-0: Testsuite: prefer solaris64 architecture for building
                            dependencies in compile_source procedure

AD-2004-01-15-2: Bugfix:    Did fix build on glinux
                 Changed:   qmaster, lck

AD-2004-01-15-1: Bugfix:    - Did apply patch from John Marshall for SUPER-UX
                 Changed:   utilbin

AD-2004-01-15-0: Enhancem:  - MT version of sge_qmaster.
                            - added locks for MT saftey
                 Review:    TBD
                 Changed:   qmaster, evm, gdi, lck, sgeobj, common

SG-2004-01-15-2: Enhancem:  - changed delimeter for the reporting file (new ":")
                            - changed the allowed characters in a job name
                              to the common object name specification
                            - qsub -l time requests are transformed into
                              a value based on seconds. This means, that we
                              have no ":"in the accounting and reporting 
                              files anymore.
                 Review:    JG
                 Changed:   qmaster

SG-2004-01-15-1: Bugfix:    fixed qdel -uall and qdel -u NAME
                 Review:    JG
                 Changed:   qdel, man pages

SG-2004-01-15-0: Bugfix:    fixed the build


CR-2004-01-15-3: Bugfix:    - code clean up (function names)

CR-2004-01-15-2: Bugfix:    - fixed event client where subscription 
                              ( abort() error because a used list was not subscribed)
                            - set synchron receive timeout of communication lib to